# bevy-iconwars

./: .gitignore  Cargo.toml  Makefile  README.md  bevy_game.js
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/: CREDITS  box.blend  icons.icon.json  shader.wgsl
assets/icon-tiler/: .gitignore  .nvmrc  index.js  package-lock.json  package.json
assets/music/: LICENSE
src/: main.rs
src/game/: audio.rs  camera.rs  debug.rs  hud.rs  mod.rs  render.rs  settings.rs  states.rs
src/game/assets/: icons.rs  mod.rs
src/game/icons/: capture.rs  commands.rs  components.rs  controller.rs  events.rs  health.rs  mod.rs  renderer.rs  resources.rs  roaming.rs  spatial.rs
src/game/world/: mod.rs
wasm/: bevy_game.js  index.html
wasm/assets/: box.gltf  icons.icon.json  paperman.gltf
